    - --repeat command line switch was added to the console interface
      and to the boot time defragmenter
    - volume label is now displayed by the console interface for
      -l and -la switches
    - ability to defragment a few more internal NTFS files 
      ($Secure streams, $Extend folder and its subfolders) was added
    - ability to defragment reparse points was added
    - all the volume processing routines were optimized for speed
    - one bug causing incorrect time limit treatment was fixed
    - added display of the time limit at boot time
    - MFT zone draw was adjusted to be more precise and correct
    - few bugs in cluster map redraw algorithm were fixed
    - few bugs in volume processing routines were fixed
    - console interface help screen now includes examples
    - the following translations were added:

      Latin, Hebrew, Javanese, Indonesian (Bahasa Indonesia)

    - the following translations were updated:

      Portuguese (BR), Yiddish, Hungarian, Spanish (ES), Dutch, Finnish,
      Italian, Iloko, Filipino (Tagalog), Catalan, Danish, Norwegian,
      Portuguese
    
    - installer has been enhanced in the following ways:
      + now checks Mutex to prevent install/remove while the program is running
      + installer supports full, micro edition and custom installation
      + component selections are remembered between installations
      + interfaces can be selected individually
      + shortcut icons can be selected individually
      + all selections can be done through command line switches
        during silent installations using the /S switch:
            * /FULL .............. install full edition
            * /MICRO ............. install micro edition (no GUI, no help, no icons)
            * /ICONS ............. install/remove all shortcut icons
            * /BOOT .............. install/remove boot time component
            * /CONSOLE ........... install/remove console component