@@ -12,6 +12,8 @@ HISTORY
     - ability to defragment a few more internal NTFS files 
       ($Secure streams, $Extend folder and its subfolders) was added
     - ability to defragment reparse points was added
+    - volume analysis was forced to skip files of zero length and
+      resident streams (files located inside MFT)
     - all the volume processing routines were optimized for speed
     - one bug causing incorrect time limit treatment was fixed
     - added display of the time limit at boot time
@@ -66,6 +68,8 @@ HISTORY
     - winx_init routine removed from zenwinx library
     - winx_defrag_fopen and winx_defrag_fclose routines
       added to zenwinx library
+    - WINX_FTW_SKIP_RESIDENT_STREAMS flag added to winx_ftw and winx_scan_disk
+      routines
     - calling conventions removed from all the function prototypes
       in all the libraries
 
